crates/sotf-plugins/tests/snapshots/render_plan_snapshots__mono_to_stereo__mono_to_stereo__desktop_1200.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "mono_to_stereo",
  "width": 1200.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "config_controls": [
    {
      "param_index": 2,
      "param_name": "Comp EQ",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 3,
      "param_name": "Comp EQ Depth",
      "control_type": "knob",
      "unit": "dB",
      "range": [
        0.0,
        3.0
      ],
      "read_only": false
    }
  ],
  "main_groups": [
    {
      "title": "",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Width",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Advanced",
      "controls": [
        {
          "param_index": 1,
          "param_name": "Haas Delay",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            0.0,
            5.0
          ],
          "read_only": false
        },
        {
          "param_index": 4,
          "param_name": "Decor Low",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            100.0,
            500.0
          ],
          "read_only": false
        },
        {
          "param_index": 5,
          "param_name": "Decor High",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            1000.0,
            5000.0
          ],
          "read_only": false
        },
        {
          "param_index": 6,
          "param_name": "Freq Dependent",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
