crates/sotf-plugins/tests/snapshots/render_plan_snapshots__mono_to_stereo__mono_to_stereo__desktop_600.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "mono_to_stereo",
  "width": 600.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "primary"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "primary",
      "title": "",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Width",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Advanced",
      "controls": [
        {
          "param_index": 1,
          "param_name": "Haas Delay",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            0.0,
            5.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Decor Low",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            100.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 3,
          "param_name": "Decor High",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            1000.0,
            5000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 4,
          "param_name": "Freq Dependent",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
